# PicoiOS

./: SwiftECC.swift  VisualCode.swift  pico.swift
OpenSSL/OpenSSL-for-iOS.xcodeproj/: project.pbxproj
OpenSSL/include/openssl/: opensslconf.h
Scanner/: AppDelegate.swift  CodeHandler.swift  DatabaseManager.swift  Info.plist  KeyPair.swift  Scanner-Bridging-Header.h  SigmaProver.swift  SigmaProxy.swift  SignedVisualCode.swift  SwiftyJSON.swift  TouchID.swift  URLHandler.swift  ViewController.swift
Scanner.xcodeproj/: project.pbxproj
Scanner.xcodeproj/project.xcworkspace/xcshareddata/: Scanner.xcscmblueprint
Scanner.xcodeproj/xcuserdata/adamroberts.xcuserdatad/xcschemes/: Scanner.xcscheme  xcschememanagement.plist
Scanner/Base.lproj/: LaunchScreen.storyboard
Scanner/com/google/gson/: DefaultDateTypeAdapter.h  DefaultDateTypeAdapter.m  ExclusionStrategy.h  ExclusionStrategy.m  FieldAttributes.h  FieldAttributes.m  FieldNamingPolicy.h  FieldNamingPolicy.m  (+46 more)
Scanner/curl/: curlbuild.h
Scanner/pico/: Makefile.am  auth.c  auth.h  base64.c  base64.h  buffer.c  buffer.h  cdecode.c  cdecode.h  cencode.c  cencode.h  channel.c  channel.h  continuous.c  continuous.h  cryptosupport.c  cryptosupport.h  curlsupport.c  curlsupport.h  debug.c  debug.h  displayqr.c  displayqr.h  dllpublic.h  json.c  json.h  keyagreement.c  keyagreement.h  keyauth.c  keyauth.h  keypair.c  keypair.h  keypairing.c  keypairing.h  log.c  log.h  messagepicoauth.c  messagepicoauth.h  messagepicoreauth.c  messagepicoreauth.h  (+25 more)
ScannerTests/: ScannerTests.swift
ScannerUITests/: ScannerUITests.swift
(+811 files in other folders)
